Revise README.md for project overview and instructions
Updated README with project details, features, installation guide, and future enhancements.